tests/golden/type_errors/lambda_duplicate_parameter.cd
let f = fun (x, x) {
  return x;
};
